# ComfyUI_RandomPerson

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  random_person_node.py  test_random_person.py
data/female/: body_type.json  bust_shape.json  bust_size.json  chest.json  clothing.json  face_feature.json  face_shape.json  facial_hair.json  footwear.json  hair_color.json  hair_length.json  hair_style.json  makeup.json  mouth_shape.json  nose_shape.json  shoulders.json
data/male/: body_type.json  chest.json  clothing.json  face_feature.json  face_shape.json  facial_hair.json  footwear.json  hair_color.json  hair_length.json  hair_style.json  makeup.json  mouth_shape.json  nose_shape.json  shoulders.json
data/shared/: accessories.json  age.json  complexion.json  expression.json  eye_shape.json  eyebrows.json  eyes.json  face_feature.json  nationality.json  skin_texture.json
docs/superpowers/plans/: 2026-06-21-segmented-nodes-and-body-attributes.md
docs/superpowers/specs/: 2026-06-21-segmented-nodes-and-body-attributes-design.md
js/: random_person_node.js
