[project]
name = "comfyui_randomperson"
description = "Generate randomised, structured physical person descriptions for image-generation prompts. Sex-aware traits, per-category random/allow_list/fixed/off modes, age ranges, body details, and individual output pins. Full node plus Identity, Face, Hair, Body, and Style segment nodes under the Random Person menu category."
version = "1.2.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/bradsec/ComfyUI_RandomPerson"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bradsec"
DisplayName = "ComfyUI_RandomPerson"
Icon = ""
